# relops-infra

./: README.md  apply_rejh_puppet.sh  fabfile.py  list_quar.js  quarantine_tc.js  quarantine_tc.py  reset_moonshot_and_pxe_boot.py
ci-configuration-tools/: .gitignore  README.md  docker-worker-report.sh  docker-worker-report2.sh  experiments_on_generated_image_research.sh  generate.sh  generate_graph.sh  generated_image_research.sh  generated_image_use.py  generated_image_use.sh  graph.py  image_count.sh  image_count_linux.sh  image_find_alias.py  images_find_alias.py  install.sh  make_symlinks_for_executables.py  pool_images.py  pools_images.py  pools_images_count.sh  pools_images_count_linux.sh  pyproject.toml  summarize_tasks.py  test.sh  test_summarize_tasks.py
ci-configuration-tools/cytoscape_viewer/: README.md  worker_pools_viewer_focusmode_multiselect.html
ci-configuration-tools/taskcluster_cytoscape/: README.md  deploy_to_gh_pages.sh  (+4 more)
moonshot/: BRANCH_ISSUES.md  README.md  SHELL_SCRIPTS.md  check_power.sh  check_taskcluster_state.sh  hostname_to_cart.sh  keep_moonshot_carts_up.md  keep_moonshot_carts_up.py  keep_moonshot_carts_up.sh  moon_command.sh  moon_ilo_command.exp  moonshot_fixer.py  moonshot_fixer.sh  moonshot_hang_report.py  moonshot_ilo_url.py  moonshot_jnlp.py  moonshot_jnlp_notes.md  moonshot_lib.py  moonshot_medic.py  ms_javaws_runner  ms_javaws_runner.py  oneshot_1804_x11_talos.sh  oneshot_2404_x11_talos.sh  oneshot_linux.sh  override_tool.py  pyproject.toml  reboot_hung.sh  reboot_if_on.exp  reboot_loop.sh  reimage.exp  reimage_1804.exp  reimage_1804.sh  reimage_2404.exp  reimage_2404.sh  reimage_and_converge_2404_x11_talos.sh  reimage_loop.sh  reimage_watch.exp  reset_moonshot.py  reset_moonshot_and_pxe_boot.py  test_run_remote.sh  (+6 more)
virtualbox_gw_runner/: .gitignore  README.md  dev_transfer.sh  env_file  pyproject.toml  sleep.py  virtualbox-gw-runner.service  virtualbox_gw_runner.py  worker-runner.config
(+73 files in other folders)
