[project]
name = "ci-configuration-tools"
version = "0.1.0"
description = ""
authors = [{name = "Andrew Erickson",email = "aerickson@mozilla.com"}]
license = {text = "MPL 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml (>=6.0.2,<7.0.0)"]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
