[tool.poetry]
name = "virtualbox-gw-runner"
version = "0.1.0"
description = ""
authors = ["Andrew Erickson <aerickson@mozilla.com>"]
license = "MPL 2.0"
readme = "README.md"
packages = [{include = "virtualbox_gw_runner"}]

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^3.1.0"
scp = "^0.14.5"
humanize = "^4.6.0"
tcppinglib = "^2.0.3"
psutil = "^5.9.5"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
